now indexing is working, but not correctly